feat: add npm & sass

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,1 @@
-@import 'normalaize', 'fonts', 'mixins', 'media', 'variables', 'utils', 'globals';
+@import 'normalize', 'fonts', 'mixins', 'media', 'variables', 'utils', 'globals';
