feat: add header adaptive styles without burger button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -331,20 +331,55 @@ h4 {
 .header {
   padding-top: 60px;
 }
+@media (max-width: 1280px) {
+  .header {
+    padding-top: 30px;
+  }
+}
 .header__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
   column-gap: 40px;
 }
+@media (max-width: 1023px) {
+  .header__inner {
+    column-gap: 30px;
+  }
+}
+@media (max-width: 1023px) {
+  .header__logo {
+    max-width: 120px;
+  }
+}
+@media (max-width: 767px) {
+  .header__logo {
+    max-width: 144px;
+  }
+}
 .header__menu {
   margin-left: auto;
   font-size: 20px;
+}
+@media (max-width: 1280px) {
+  .header__menu {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1023px) {
+  .header__menu {
+    font-size: 16px;
+  }
 }
 .header__menu-list {
   display: flex;
   align-items: center;
   column-gap: 40px;
+}
+@media (max-width: 1280px) {
+  .header__menu-list {
+    column-gap: 20px;
+  }
 }
 .header__menu-link {
   position: relative;
@@ -372,6 +407,13 @@ h4 {
   height: 2px;
   background-color: currentColor;
   transition-duration: inherit;
+}
+@media (max-width: 1023px) {
+  .header__button {
+    height: 48px;
+    padding-inline: 18px;
+    font-size: 16px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
