--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -3,21 +3,51 @@
 .header {
   padding-top: 60px;
 
+  @include desktop {
+    padding-top: 30px;
+  }
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     column-gap: 40px;
+
+    @include tablet {
+      column-gap: 30px;
+    }
+  }
+
+  &__logo {
+    @include tablet {
+      max-width: 120px;
+    }
+
+    @include mobile {
+      max-width: 144px;
+    }
   }
 
   &__menu {
     margin-left: auto;
     font-size: 20px;
 
+    @include desktop {
+      font-size: 18px;
+    }
+
+    @include tablet {
+      font-size: 16px;
+    }
+
     &-list {
       display: flex;
       align-items: center;
       column-gap: 40px;
+
+      @include desktop {
+        column-gap: 20px;
+      }
     }
 
     &-link {
@@ -43,6 +73,14 @@
         background-color: currentColor;
         transition-duration: inherit;
       }
+    }
+  }
+
+  &__button {
+    @include tablet {
+      height: 48px;
+      padding-inline: 18px;
+      font-size: 16px;
     }
   }
 }
