feat: add modal menu styles

--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -7,6 +7,10 @@
     padding-top: 30px;
   }
 
+  @include mobile {
+    padding-top: 15px;
+  }
+
   &__inner {
     display: flex;
     justify-content: space-between;
