--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,4 +6,6 @@
 
 @use 'blocks/button';
 @use 'blocks/burger-button';
+@use 'blocks/cross-button';
+@use 'blocks/mobile-overlay';
 @use 'blocks/header';
