--- a/styles/styles.css
+++ b/styles/styles.css
@@ -513,4 +513,40 @@ h4 {
   }
 }
 
+.section {
+  padding-block: var(--section-padding-y);
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--section-padding-y);
+}
+.hero__main {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  column-gap: 30px;
+}
+.hero__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 35px;
+  max-width: 531px;
+}
+.hero__description {
+  font-size: 20px;
+  line-height: 1.4;
+}
+.hero__partners-list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 37px;
+  align-items: center;
+}
+.hero__partners-image {
+  filter: grayscale(1);
+}
+
 /*# sourceMappingURL=styles.css.map */
