--- a/styles/helpers/_media.scss
+++ b/styles/helpers/_media.scss
@@ -7,6 +7,9 @@ $tablet: 1023px;
 $mobile-above: 768px;
 $mobile: 767px;
 
+$mobile-s-above: 481px;
+$mobile-s: 480px;
+
 @mixin desktop {
   @media (max-width: $desktop) {
     @content;
@@ -39,6 +42,18 @@ $mobile: 767px;
 
 @mixin mobile-above {
   @media (min-width: $mobile-above) {
+    @content;
+  }
+}
+
+@mixin mobile-s {
+  @media (max-width: $mobile-s) {
+    @content;
+  }
+}
+
+@mixin mobile-s-above {
+  @media (min-width: $mobile-s-above) {
     @content;
   }
 }
