feat: add grid cards styles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,9 +5,14 @@
 @use 'globals';
 
 @use 'blocks/button';
+@use 'blocks/grid';
 @use 'blocks/burger-button';
 @use 'blocks/cross-button';
 @use 'blocks/mobile-overlay';
 @use 'blocks/header';
 @use 'blocks/section';
 @use 'blocks/hero';
+@use 'blocks/puddle-bg';
+@use 'blocks/services';
+@use 'blocks/service-card';
+@use 'blocks/banner';
