--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,7 +13,7 @@
   --border-radius-small: 7px;
   --border-radius-large: 45px;
 
-  --shadow: 0 5px 0 0 var(var(--color-dark));
+  --shadow: 0 5px 0 0 var(--color-dark);
 
   --font-family-base: 'Space Grotesk', sans-serif;
 
