--- a/styles/styles.css
+++ b/styles/styles.css
@@ -768,4 +768,29 @@ h4 {
   color: var(--serviceCardLinkIconColor);
 }
 
+.banner {
+  --bannerImageOffsetY: 24px;
+  padding-block: var(--bannerImageOffsetY);
+}
+.banner__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+}
+.banner__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 26px;
+  padding: 60px;
+}
+.banner__description {
+  max-width: 500px;
+}
+.banner__image {
+  margin-block: calc(var(--bannerImageOffsetY) * -1);
+}
+
 /*# sourceMappingURL=styles.css.map */
