--- a/styles/blocks/_services.scss
+++ b/styles/blocks/_services.scss
@@ -4,6 +4,10 @@
   &__list {
     &:not(:last-child) {
       margin-bottom: 100px;
+
+      @include mobile {
+        margin-bottom: 70px;
+      }
     }
   }
 }
