feat: add accordion section adaptive styles

--- a/styles/blocks/_process.scss
+++ b/styles/blocks/_process.scss
@@ -7,10 +7,20 @@
     row-gap: 30px;
     counter-reset: custom-counter;
     list-style: none;
+
+    @include mobile {
+      row-gap: 20px;
+    }
   }
 
   &__item {
+    --counterContent: counter(custom-counter);
+
     counter-increment: custom-counter;
+
+    &:nth-child(-n + 9) {
+      --counterContent: '0' counter(custom-counter);
+    }
   }
 
   &__accordion {
@@ -27,6 +37,10 @@
       background-color: var(--color-accent);
     }
 
+    @include mobile {
+      padding: 30px;
+    }
+
     &[open] {
       --indicatorVerticalRotate: 0deg;
 
@@ -40,16 +54,30 @@
       column-gap: 50px;
       cursor: pointer;
       user-select: none;
+
+      @include mobile {
+        column-gap: 28px;
+      }
     }
 
     &-title {
+      @include fluid-text(30, 18);
+
       display: flex;
       align-items: center;
       column-gap: 25px;
 
+      @include mobile {
+        column-gap: 33px;
+      }
+
       &::before {
-        content: '0' counter(custom-counter);
+        content: var(--counterContent);
         font-size: 2em;
+
+        @include mobile {
+          font-size: 30px;
+        }
       }
     }
 
@@ -58,9 +86,14 @@
       @include square(58px);
 
       position: relative;
+      flex-shrink: 0;
       background-color: var(--color-gray);
       border: var(--border);
       border-radius: 50%;
+
+      @include mobile {
+        width: 30px;
+      }
 
       &::before,
       &::after {
