feat: add team section adaptive styles

--- a/styles/blocks/_team-card.scss
+++ b/styles/blocks/_team-card.scss
@@ -7,6 +7,10 @@
   border-radius: var(--border-radius-large);
   box-shadow: var(--shadow);
 
+  @include mobile {
+    padding-inline: 50px;
+  }
+
   &__header {
     display: flex;
   }
@@ -44,8 +48,14 @@
   }
 
   &__body {
-    margin-top: 28px;
-    padding-top: 28px;
+    --teamCardBodyMarginTop: 28px;
+
+    margin-top: var(--teamCardBodyMarginTop);
+    padding-top: var(--teamCardBodyMarginTop);
     border-top: var(--border);
+
+    @include mobile {
+      --teamCardBodyMarginTop: 20px;
+    }
   }
 }
