feat: add review section desktop styles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,3 +20,6 @@
 @use 'blocks/process';
 @use 'blocks/team';
 @use 'blocks/team-card';
+@use 'blocks/pagination';
+@use 'blocks/reviews';
+@use 'blocks/review-card';
