fix: hide the bulging slider

--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -9,6 +9,7 @@
   color: var(--color-light);
   background-color: var(--color-dark);
   border-radius: var(--border-radius-large);
+  overflow-x: hidden;
 
   &__slider {
     --reviewsSliderSlideWidth: 606px;
