--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,9 @@
 @use 'globals';
 
 @use 'blocks/button';
+@use 'blocks/field';
+@use 'blocks/radios';
+@use 'blocks/radio';
 @use 'blocks/grid';
 @use 'blocks/burger-button';
 @use 'blocks/cross-button';
@@ -23,3 +26,4 @@
 @use 'blocks/pagination';
 @use 'blocks/reviews';
 @use 'blocks/review-card';
+@use 'blocks/contact-us';
