--- a/styles/blocks/_contact-us.scss
+++ b/styles/blocks/_contact-us.scss
@@ -2,10 +2,13 @@
 
 .contact-us {
   position: relative;
-  padding: 60px 100px 80px;
-  background-color: var(--color-gray);
-  border-radius: var(--border-radius-large);
   overflow-x: hidden;
+
+  @include mobile-above {
+    padding: 60px 100px 80px;
+    background-color: var(--color-gray);
+    border-radius: var(--border-radius-large);
+  }
 
   &::after {
     --contactUsImageOffsetY: 62px;
@@ -18,6 +21,10 @@
     height: calc(100% - var(--contactUsImageOffsetY) * 2);
     aspect-ratio: 1;
     background: url(../../images/contact-us-bg.svg) center/contain no-repeat;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__form,
@@ -26,12 +33,39 @@
     flex-direction: column;
   }
 
+  &__request-types,
+  &__body {
+    @include mobile {
+      background-color: var(--color-gray);
+    }
+  }
+
+  &__request-types {
+    @include mobile {
+      width: 100%;
+      padding: 40px 52px 36px;
+      border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
+    }
+  }
+
   &__form {
-    row-gap: 40px;
-    max-width: 556px;
+    @include tablet-above {
+      max-width: 556px;
+    }
+
+    @include mobile-above {
+      row-gap: 40px;
+    }
   }
 
   &__body {
     row-gap: 25px;
+
+    @include mobile {
+      row-gap: 20px;
+      margin-bottom: 30px;
+      padding: 10px 30px 50px;
+      border-radius: 0 0 var(--border-radius-large) var(--border-radius-large);
+    }
   }
 }
