feat: add footer desktop styles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,3 +27,6 @@
 @use 'blocks/reviews';
 @use 'blocks/review-card';
 @use 'blocks/contact-us';
+@use 'blocks/soc1als';
+@use 'blocks/subscribe-form';
+@use 'blocks/footer';
