--- a/styles/blocks/_subscribe-form.scss
+++ b/styles/blocks/_subscribe-form.scss
@@ -6,4 +6,12 @@
   padding: 58px 40px;
   background-color: var(--color-dark-alt);
   border-radius: var(--border-radius);
+
+  @include desktop {
+    flex-direction: column;
+    row-gap: 22px;
+    padding: 30px;
+    width: 100%;
+    max-width: 450px;
+  }
 }
