--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1559,18 +1559,57 @@ h4,
   background-color: var(--color-dark-alt);
   border-radius: var(--border-radius);
 }
+@media (max-width: 1280px) {
+  .subscribe-form {
+    flex-direction: column;
+    row-gap: 22px;
+    padding: 30px;
+    width: 100%;
+    max-width: 450px;
+  }
+}
 
+@media (max-width: 767px) {
+  .footer {
+    padding-inline: 0;
+  }
+}
 .footer__inner {
   padding: 55px 60px 50px;
   color: var(--color-light);
   background-color: var(--color-dark);
-  border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
+}
+@media (min-width: 768px) {
+  .footer__inner {
+    border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
+  }
+}
+@media (max-width: 767px) {
+  .footer__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 37px;
+    padding: 50px var(--container-padding-x) 30px;
+  }
 }
 .footer__navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   column-gap: 30px;
+}
+@media (max-width: 1023px) {
+  .footer__navigation {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 37px;
+  }
+}
+@media (max-width: 767px) {
+  .footer__navigation {
+    display: contents;
+  }
 }
 .footer__navigation:not(:last-child) {
   margin-bottom: 66px;
@@ -1579,6 +1618,12 @@ h4,
   display: flex;
   align-items: center;
   column-gap: 40px;
+}
+@media (max-width: 767px) {
+  .footer__menu-list {
+    flex-direction: column;
+    row-gap: 15px;
+  }
 }
 .footer__menu-link {
   display: inline-flex;
@@ -1596,21 +1641,46 @@ h4,
     color: var(--color-accent);
   }
 }
+@media (max-width: 767px) {
+  .footer__soc1als {
+    order: 1;
+  }
+}
 .footer__body {
   display: flex;
   justify-content: space-between;
   column-gap: 50px;
 }
-.footer__body:not(:last-child) {
-  padding-bottom: 50px;
-  margin-bottom: 50px;
-  border-bottom: 1px solid currentColor;
+@media (min-width: 768px) {
+  .footer__body:not(:last-child) {
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+    border-bottom: 1px solid currentColor;
+  }
+}
+@media (max-width: 767px) {
+  .footer__body {
+    flex-direction: column;
+    align-items: center;
+    row-gap: inherit;
+  }
+}
+@media (max-width: 480px) {
+  .footer__body {
+    width: 100%;
+  }
 }
 .footer__contacts {
   display: flex;
   flex-direction: column;
   align-items: start;
   row-gap: 27px;
+}
+@media (max-width: 767px) {
+  .footer__contacts {
+    align-items: center;
+    text-align: center;
+  }
 }
 .footer__contacts-title {
   color: var(--color-dark);
@@ -1634,6 +1704,17 @@ h4,
 .footer__extra {
   display: flex;
   column-gap: 40px;
+}
+@media (max-width: 767px) {
+  .footer__extra {
+    order: 2;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 15px;
+    width: 100%;
+    padding-top: 37px;
+    border-top: 1px solid currentColor;
+  }
 }
 .footer__privicy-policy-link {
   text-decoration: underline;
